Prevent line-wrapping of nav list in Safari

--- a/css/screen.sass
+++ b/css/screen.sass
@@ -46,6 +46,7 @@ header
     padding: 0
     margin: 0
     list-style-type: none
+    text-align: right
 
     li
       display: inline-block
